# Team-188-Product

./: .gitignore  README.md  app.py  manage.py  pyproject.toml
instance/: config.py
migrations/versions/: 4be4e4f13678_.py
src/api/: __init__.py
src/api/models/: article.py  comment.py  section.py  user_model.py
tests/: base.py  test_config.py  test_user_model.py
